#
# Build the documentation
#
INCLUDE (${CMAKE_ROOT}/Modules/Documentation.cmake OPTIONAL)

MARK_AS_ADVANCED(CLEAR BUILD_DOCUMENTATION) # CLEAR means not advanced

IF (BUILD_DOCUMENTATION)
  OPTION(DOXYGEN_USE_WARNINGS "Show Doxygen warnings" ON)
  MARK_AS_ADVANCED(DOXYGEN_USE_WARNINGS)
  IF(DOXYGEN_USE_WARNINGS)
    SET(DOXYGEN_USE_WARNINGS YES)
  ELSE(DOXYGEN_USE_WARNINGS)
    SET(DOXYGEN_USE_WARNINGS NO)
  ENDIF(DOXYGEN_USE_WARNINGS)

  OPTION(DOXYGEN_USE_SHORT_NAMES "Build Doxygen using short file names" OFF)
  MARK_AS_ADVANCED(DOXYGEN_USE_SHORT_NAMES)
  IF(DOXYGEN_USE_SHORT_NAMES)
    SET(DOXYGEN_USE_SHORT_NAMES YES)
  ELSE(DOXYGEN_USE_SHORT_NAMES)
    SET(DOXYGEN_USE_SHORT_NAMES NO)
  ENDIF(DOXYGEN_USE_SHORT_NAMES)

  #
  # Configure the script and the doxyfile, then add target
  #
  SET(HAVE_DOT_YESNO NO)
  IF(DOT)
    SET(HAVE_DOT_YESNO YES)
    IF(NOT DOT_PATH)
      GET_FILENAME_COMPONENT(DOT_PATH ${DOT} PATH)
    ENDIF(NOT DOT_PATH)
  ENDIF(DOT)

  CONFIGURE_FILE(
    ${CustusX3_SOURCE_DIR}/doc/Doxyfile.in
    ${CustusX3_BINARY_DIR}/doc/Doxyfile)

  ADD_CUSTOM_TARGET(DoxygenDoc
    ALL
    ${DOXYGEN_EXECUTABLE}
    ${CustusX3_BINARY_DIR}/doc/Doxyfile)

    ADD_DEPENDENCIES(DoxygenDoc CustusX3)

ENDIF (BUILD_DOCUMENTATION)
